# local-ai-agents

./: .gitignore  README.md  pyproject.toml
agent/: update_dependencies_agent.py
agents/: update_dependencies_agent.py
agents/mastra_file_analyst/: package.json  tsconfig.json
agents/mastra_file_analyst/src/: index.ts
